--- a/landing/index.html
+++ b/landing/index.html
@@ -322,7 +322,7 @@
                </div>
                <div class="testi__content">
                   <h3>
-                     Danial Dennis
+                     Santiago Luna
                   </h3>
                   <p>
                      It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
@@ -340,7 +340,7 @@
                </div>
                <div class="testi__content">
                   <h3>
-                     Shakira Judith
+                     Karla Estela 
                   </h3>
                   <p>
                      It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
